[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/font_big.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ScoreBoard.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Styles/Button.tres" type="StyleBox" id=5]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.027451, 0.0627451, 0.0745098, 1, 0.654902, 0.113725, 0.192157, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1799.0
margin_bottom = 900.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 621.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer"]
margin_right = 621.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 1 )
text = "in my dreams"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 621.0
margin_bottom = 187.0
custom_styles/focus = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "dream"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
margin_top = 191.0
margin_right = 621.0
margin_bottom = 256.0
custom_styles/focus = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "others"
flat = true
align = 0

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 621.0
margin_bottom = 325.0
custom_styles/focus = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "us"
flat = true
align = 0

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 329.0
margin_right = 621.0
margin_bottom = 394.0
mouse_default_cursor_shape = 8
custom_styles/focus = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "wake"
flat = true
align = 0

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 20.0
max_value = 10.0
step = 1.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBoard" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 600, 0 )

[connection signal="mouse_entered" from="VBoxContainer/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Play" to="." method="_on_Play_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Leaderboard" to="." method="_on_Leaderboard_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Leaderboard" to="." method="_on_Leaderboard_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Credits" to="." method="_on_Credits_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
